--- a/index.html
+++ b/index.html
@@ -124,7 +124,34 @@
 	</div>
 
 	<div class="home_img5 home_margTop2">
-		
+		<div class="container">
+			<div style="text-align: center;">
+				<div class="home_subtitle" style="padding-top: 3vw">
+					<p>what we do</p>
+				</div>
+				<div class="row">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-8">
+						<div class="home_title">
+							<p>Non-formal education and participatory arts projects</p>
+						</div>						
+					</div>
+					<div class="col-sm-2"></div>
+				</div>
+				<div class="row">
+					<div class="col-sm-3"></div>
+					<div class="col-sm-6">
+						<div class="home_text" style="margin-top: 1vw">
+							<p>CAAT Projects is engaging in many different projects from different organizations and professionals</p>
+						</div>						
+					</div>
+					<div class="col-sm-3"></div>
+				</div>
+				<div class="home_link">
+					<a href="">See all projects</a>
+				</div>
+			</div>	
+		</div>
 	</div>
 </div>
 
