--- a/index.html
+++ b/index.html
@@ -52,14 +52,11 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<p>
-						CAAT Projects is a non-profit NGO, established in The Hague, Netherlands. CAAT stands for a more colourful world where arts, creativity and non-formal education enables respect & promotion of human rights.
+						CAAT Projects is a non-profit NGO, established in The Hague, Netherlands. CAAT stands for a more colorful world where arts, creativity and non-formal education enables respect & promotion of human rights.
 					</p>
 				</div>
-				
-			</div>
-			
+			</div>	
 		</div>
-		
 	</div>
 	<div class="home_img2">
 		<div class="container home_img2_text">
@@ -124,35 +121,180 @@
 	</div>
 
 	<div class="home_img5 home_margTop2">
-		<div class="container">
+		<div class="container-fluid">
 			<div style="text-align: center;">
-				<div class="home_subtitle" style="padding-top: 3vw">
+				<div class="home_subtitle" style="padding-top: 6vw">
 					<p>what we do</p>
 				</div>
 				<div class="row">
-					<div class="col-sm-2"></div>
-					<div class="col-sm-8">
+					<div class="col-sm-4"></div>
+					<div class="col-sm-4">
 						<div class="home_title">
 							<p>Non-formal education and participatory arts projects</p>
 						</div>						
 					</div>
-					<div class="col-sm-2"></div>
+					<div class="col-sm-4"></div>
 				</div>
 				<div class="row">
-					<div class="col-sm-3"></div>
-					<div class="col-sm-6">
+					<div class="col-sm-4"></div>
+					<div class="col-sm-4">
 						<div class="home_text" style="margin-top: 1vw">
 							<p>CAAT Projects is engaging in many different projects from different organizations and professionals</p>
 						</div>						
 					</div>
-					<div class="col-sm-3"></div>
+					<div class="col-sm-4"></div>
 				</div>
 				<div class="home_link">
 					<a href="">See all projects</a>
 				</div>
+				<div class="row home_margTop3">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-8">
+						<div class="row">
+							<div class="col-sm-4 home_proj">
+								<a href="#"><img src="assets/images/home6.png"></a>	
+								<div class="home_projText">
+									<div class="home_projOrg">
+										<p>
+											led by caatprojects
+										</p>
+									</div>
+									<div class="home_projTitle">
+										<a href="#">
+											Spaceship to a creative Europe
+										</a>
+									</div>
+									<div class="home_projCode">
+										<p>
+											Project code: 2018-3-NL02-KA105-002224
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-4 home_proj">
+								<a href="#"><img src="assets/images/home6.png"></a>	
+								<div class="home_projText">
+									<div class="home_projOrg">
+										<p>
+											together with hop and sinchi
+										</p>
+									</div>
+									<div class="home_projTitle">
+										<a href="#">
+											Escape room for human rights
+										</a>
+									</div>
+									<div class="home_projCode">
+										<p>
+											local project in the Netherlands
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-4 home_proj">
+								<a href="#"><img src="assets/images/home6.png"></a>	
+								<div class="home_projText">
+									<div class="home_projOrg">
+										<p>
+											together with hop and sinchi
+										</p>
+									</div>
+									<div class="home_projTitle">
+										<a href="#">
+											placeholder title
+										</a>
+									</div>
+									<div class="home_projCode">
+										<p>
+											Project code: 2018-3-NL02-KA105-002224
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-2"></div>
+				</div>
 			</div>	
 		</div>
 	</div>
+
+	<div class="container-fluid home_margTop4">
+		<div class="home_title" style="text-align: center">
+			<p> Organizations we work with</p>
+		</div>
+		<div class="row d-flex flex-wrap align-items-center home_padBot">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo1.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo2.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo3.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo4.png"></div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class="row d-flex flex-wrap align-items-center home_padBot" >
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo5.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo6.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo7.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo8.png"></div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class="row d-flex flex-wrap align-items-center home_padBot">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo9.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo10.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo11.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo12.png"></div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class="row d-flex flex-wrap align-items-center">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo13.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/logos/logo14.png"></div>
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"></div>
+		</div>
+	</div>
+	<footer>
+		<div class="container-fluid home_work home_margTop4" style="text-align: center;">
+			<div class="home_title home_padTop">
+				<p>
+					Want to work with us?
+				</p>
+			</div>
+			<div class="home_text home_padBot">
+				<p>
+					Would you like to collaborate with us? Do not hesitate to contact.
+				</p>
+			</div>
+			<div class="footer_button home_padBot">
+				<button>
+					Contact us
+				</button>
+			</div>
+		</div>
+
+		<div class="container-fluid footer_ home_margTop5" style="text-align: center;">
+			<div class="home_footerText">
+				<p>
+					Follow us on social media
+				</p>
+			</div>
+			<div class="row home_padBot">
+				<div class="col-sm-4"></div>
+				<div class="col-sm-4">
+					<div class="row home_margTop5">
+						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/fb.png"></a></div>
+						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/insta.png"></a></div>
+						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
+					</div>
+				</div>
+				<div class="col-sm-4"></div>
+			</div>
+		</div>
+	</footer>
+	
 </div>
 
 </body>
