--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	</div>
 
 	<div class="container-fluid home_margTop">
-		<div class="row">
+		<div class="row d-flex flex-wrap align-items-center">
 			<div class="col-sm-2"></div>
 			<div class="col-sm-4">
 				<img class="img_responsive" src="assets/images/home4.png">
@@ -123,7 +123,7 @@
 	<div class="home_img5 home_margTop2">
 		<div class="container-fluid">
 			<div style="text-align: center;">
-				<div class="home_subtitle" style="padding-top: 6vw">
+				<div class="home_subtitle home_img5Pad">
 					<p>what we do</p>
 				</div>
 				<div class="row">
@@ -147,7 +147,7 @@
 				<div class="home_link">
 					<a href="">See all projects</a>
 				</div>
-				<div class="row home_margTop3">
+				<div class="row home_img5Pad">
 					<div class="col-sm-2"></div>
 					<div class="col-sm-8">
 						<div class="row">
