--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
 <div class="caat_navbar">
-	<div class="row remove_row_margin">
-		<div class="col-sm-2">
+	<div class="row remove_row_margin align-items-center " style="height: 100%">
+		<div class="col-sm-2" style="padding-left: 40px">
 			<a  href="#">
-    			<img src="assets/images/logo.png" alt="logo" style="width:80px;">
+    			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
   			</a>
 		</div>
 		<div class="col-sm-10">
