--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="navbar justify-content-end">
 				<ul class="nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Goals and methodology</a>
+						<a class="nav-link" href="goals">Goals and methodology</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Who we are</a>
@@ -256,6 +256,8 @@
 			<div class="col-sm-2"></div>
 		</div>
 	</div>
+
+	<!-- ------------------------------footer-------------------------------------- -->
 	<footer>
 		<div class="container-fluid home_work home_margTop4" style="text-align: center;">
 			<div class="home_title home_padTop">
@@ -294,7 +296,6 @@
 			</div>
 		</div>
 	</footer>
-	
 </div>
 
 </body>
