--- a/goals.html
+++ b/goals.html
@@ -12,7 +12,7 @@
 	<div class="caat_navbar">
 		<div class="row remove_row_margin align-items-center " style="height: 100%">
 			<div class="col-sm-2" style="padding-left: 40px">
-				<a  href="#">
+				<a  href="home">
 	    			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
 	  			</a>
 			</div>
@@ -40,6 +40,27 @@
 		</div>
 	</div>
 
+	<div class="container-fluid remove_padding">
+		<div class="goals_img1">
+			<div class="container-fluid goals_padtop">
+				<div class="row goals_toptittle">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-4">
+						<p>CAAT goals and methodology</p>
+					</div>
+				</div>
+				<div class="row goals_toptext">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-3">
+						<p>
+							CAAT stands for Creating Arts and Alternatives Together and it uses creativity and arts to empower vulnerable groups and promote human rights and tolerant communities.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+	</div>
 	<!-- ------------------------------footer-------------------------------------- -->
 	<footer>
 		<div class="container-fluid home_work home_margTop4" style="text-align: center;">
