--- a/goals.html
+++ b/goals.html
@@ -12,7 +12,7 @@
 	<div class="caat_navbar">
 		<div class="row remove_row_margin align-items-center " style="height: 100%">
 			<div class="col-sm-2" style="padding-left: 40px">
-				<a  href="home">
+				<a  href="/">
 	    			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
 	  			</a>
 			</div>
@@ -61,6 +61,106 @@
 		</div>
 		
 	</div>
+
+	<div class="container-fluid goals_text1">
+		<div class="row">
+			<div class="col-sm4">
+				<p>
+					Strengthen the rising of a capable and critical society
+				</p>
+			</div>
+			<div class="col-sm5">
+				<p class="goals_text1">
+					We believe in the potential that we have, individually and collectively, to build a fair world for all. 
+					The world is complex and we can look into it from many different perspectives. 
+					For us it is important to understand and reflect about the roots of the things we would like to change, 
+					rather than a superficial understanding of it. In practice, this means discussing concepts as decolonization, 
+					privilege, fragilities, intersectionality, empathy and critical thinking. It can be overwhelming to understand 
+					how rooted and systemic injustices are, thus we use participatory arts methodologies,
+					 emphasizing a safe and playful environment. Moreover, we also address possibility 
+					 for actions and in sharing tools we get familiar with. We have been collaborating with some research projects
+					  with the aim to create MOOCs (https://www.informa-giovani.net/mooc.html), toolkits (http://tacklehate.eu/)
+					   and DIY guidelines (Counter and Alternatives Narratives – to be published soon).
+				</p>
+				
+				<p class="goals_text1">
+					Human rights should be guaranteed for all, although it is not yet the case. 
+					Some groups do not have many opportunities to participate in decision making process or even be heard. 
+					We want to correct this and reduce imbalances in power relations in our societies.Representativeness is important. 
+					We cannot understand others if we do not listen to them. We want to facilitate spaces and opportunities 
+					for a plurality of voices. Whether in international projects co-funded by Europe for Citizens and Erasmus 
+					plus or in local events that we host, we always make an effort to bring different people together and we 
+					practice active listening. We share personal stories and we connect with each other. Moreover, 
+					with the art creation events, we share some tools for expressing ourselves. All voices matter, 
+					especially the ones that have been traditionally oppressed. 
+					One example of this was our direct collaboration with the project Youth UnMuted ( https://www.youthunmuted.org/).
+				</p>
+			</div>
+			<div class="col-sm3"></div>
+		</div>
+		<di class="row">
+			<div class="col-sm1"></div>
+			<div class="col-sm8">
+				<p class="goals_subtitle">Train the community and youth leaders</p>
+				<p class="goals_text2">
+					We believe that we can achieve our goals by supporting those who work with young people and communities develop their own thinking 
+					and action. We mainly use non-formal education and human rights education. They have similar principles and
+					there are both based on experiential learning and centered on the learner. 
+					We do like to spice our trainings with a dynamic/interactive designed based on arts and inviting a playfulness approach, 
+					especially when we do address complicated issues. 
+					It is a privilege to organize and deliver trainings. We learn and grow together with the communities and local leaders. 
+					In this way we keep on being connected. Moreover, we have the possibility for developing our approaches to be more adapted 
+					to the current reality. We host local workshops frequently with other professionals that we admire, 
+					and we do also international trainings, within Europe. Most of the international trainings are co-funded by Erasmus Plus
+					and the Council of Europe. 
+				</p>
+
+				<p class="goals_subtitle">Build long term and sustainable changes</p>
+				<p class="goals_text2">
+					We are not focused on treating the symptoms but in acting on the root of the social challenge. 
+					In this way we know that our (sometimes baby) steps are going in the direction we want and will produce long lasting results.
+					That justifies the choices of our topics inside the human rights frame. 
+					One of the first projects we had the pleasure to be partners with was “Revealing Colonialism”, 
+					coordinated by Europäische Jugendbildungs-und Jugendbegegnungsstätte Weimar. 
+					This experience has shaped some of the choices. For example, we not only on social topics, 
+					but also in facilitating a strong self-reflection and personal development processes, 
+					both with the professionals we work with as well as within our team. 
+				</p>
+
+				<p class="goals_subtitle">Promote art and culture</p>
+				<p class="goals_text2">
+					We believe in creativity and the power of imagination, at a personal development level as well as tools for a 
+					collective transformation. There are other ways, but in our experience arts and creativity are 
+					great tools to engage a wider spectrum of individuals. It helps us to work symbolically with our reality 
+					and identify different possibilities to our problems, by using different intelligences and skills. 
+					Thus, participatory arts methods are more inclusive. Moreover, they are more fun and enjoyable to work with. 
+					And extra motivation is always welcomed. Art and culture should be accessible to all. 
+					They are essential elements for our collective well-being. Thus, we do partner with other organizations 
+					and artists who share this idea, to create events accessible to all. 
+					A few examples of this activity are the active collaboration with OT301 (http://www.ot301.nl/) in Amsterdam, 
+					that we are part of, our collaboration with Formaat and the “Shadows of the City” theatrical play and exhibition, 
+					and our active collaboration with HoP (https://homeofparticipation.art/) in theatre/performances 
+					and research projects as the project Urban ParticipArt (urbanparticipart.eu). 
+
+				</p>
+
+				<p class="goals_subtitle">Promote multiculturalism and diversity</p>
+				<p class="goals_text2">
+					The value of a colourful society that embraces different perspectives is something we believe in. 
+					While it does bring challenges, these are far less important than its potential. 
+					We work to contain the challenges and to reinforce the beauty of a diverse world. 
+					This is the base for our choice to work with human rights education. The impact we would like to achieve 
+					is a world of humanity and solidarity, where we display acceptance towards others. 
+					This goal is connected with all others and central to our actions – to involve a diverse group of people, 
+					promote a plurality of voices, encourage the acceptance of others, chose methods that are more inclusive.
+				</p>
+			</div>
+			<div class="col-sm3"></div>
+		</di>
+	</div>
+
+	<div class="container-fluid remove_padding goals_img2"></div>
+
 	<!-- ------------------------------footer-------------------------------------- -->
 	<footer>
 		<div class="container-fluid home_work home_margTop4" style="text-align: center;">
