--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="caat_navbar">
 	<div class="row remove_row_margin align-items-center " style="height: 100%">
 		<div class="col-sm-2" style="padding-left: 40px">
-			<a  href="home">
+			<a  href="/">
     			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
   			</a>
 		</div>
