--- a/goals.html
+++ b/goals.html
@@ -59,30 +59,49 @@
 				</div>
 			</div>
 		</div>
-		
 	</div>
 
-	<div class="container-fluid goals_text1">
+
+	<div class="container-fluid goals_mainTitleMargin">
 		<div class="row">
-			<div class="col-sm4">
-				<p>
+			<div class="col-sm-4"></div>
+			<div class="col-sm-8">
+				<p class="goals_mainTitle">
+					Our Goals
+				</p>
+			</div>
+		</div>
+		<div class="row goals_mainTextMargin">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-3">
+				<p class="goals_title">
 					Strengthen the rising of a capable and critical society
 				</p>
 			</div>
-			<div class="col-sm5">
+			<div class="col-sm-6">
 				<p class="goals_text1">
 					We believe in the potential that we have, individually and collectively, to build a fair world for all. 
 					The world is complex and we can look into it from many different perspectives. 
 					For us it is important to understand and reflect about the roots of the things we would like to change, 
 					rather than a superficial understanding of it. In practice, this means discussing concepts as decolonization, 
 					privilege, fragilities, intersectionality, empathy and critical thinking. It can be overwhelming to understand 
-					how rooted and systemic injustices are, thus we use participatory arts methodologies,
-					 emphasizing a safe and playful environment. Moreover, we also address possibility 
-					 for actions and in sharing tools we get familiar with. We have been collaborating with some research projects
-					  with the aim to create MOOCs (https://www.informa-giovani.net/mooc.html), toolkits (http://tacklehate.eu/)
-					   and DIY guidelines (Counter and Alternatives Narratives – to be published soon).
+					how rooted and systemic injustices are, thus we use participatory arts methodologies, 
+					emphasizing a safe and playful environment. Moreover, we also address possibility 
+					for actions and in sharing tools we get familiar with. We have been collaborating with some research projects 
+					with the aim to create MOOCs (https://www.informa-giovani.net/mooc.html), toolkits (http://tacklehate.eu/)
+					and DIY guidelines (Counter and Alternatives Narratives – to be published soon).
 				</p>
-				
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class="row goals_mainTextMargin">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-3">
+					<p class="goals_title">
+						Promote and empower vulnerable groups
+					</p>
+			</div>
+			<div class="col-sm-6">
 				<p class="goals_text1">
 					Human rights should be guaranteed for all, although it is not yet the case. 
 					Some groups do not have many opportunities to participate in decision making process or even be heard. 
@@ -96,11 +115,11 @@
 					One example of this was our direct collaboration with the project Youth UnMuted ( https://www.youthunmuted.org/).
 				</p>
 			</div>
-			<div class="col-sm3"></div>
+			<div class="col-sm-2"></div>
 		</div>
-		<di class="row">
-			<div class="col-sm1"></div>
-			<div class="col-sm8">
+		<di class="row goals_mainTextMargin">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-9">
 				<p class="goals_subtitle">Train the community and youth leaders</p>
 				<p class="goals_text2">
 					We believe that we can achieve our goals by supporting those who work with young people and communities develop their own thinking 
@@ -155,11 +174,11 @@
 					promote a plurality of voices, encourage the acceptance of others, chose methods that are more inclusive.
 				</p>
 			</div>
-			<div class="col-sm3"></div>
+			<div class="col-sm-3"></div>
 		</di>
 	</div>
 
-	<div class="container-fluid remove_padding goals_img2"></div>
+	<div class="container-fluid remove_padding goals_img2 goals_mainTitleMargin"></div>
 
 	<!-- ------------------------------footer-------------------------------------- -->
 	<footer>
