goals and who we are
goals finished, who we are started

--- a/goals.html
+++ b/goals.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <link rel="icon" href="assets/images/favicon.ico">
 	<title>CAAT PROJECTS</title>
 
 	<link rel="stylesheet" href="assets/styles/style.css">
@@ -12,7 +13,7 @@
 	<div class="caat_navbar">
 		<div class="row remove_row_margin align-items-center " style="height: 100%">
 			<div class="col-sm-2" style="padding-left: 40px">
-				<a  href="/">
+				<a  href="index">
 	    			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
 	  			</a>
 			</div>
@@ -23,7 +24,7 @@
 							<a class="nav-link" href="goals">Goals and methodology</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Who we are</a>
+							<a class="nav-link" href="who-we-are">Who we are</a>
 						</li>
 						<li class="nav-item">
 						    <a class="nav-link" href="#">Projects</a>
@@ -44,14 +45,14 @@
 		<div class="goals_img1">
 			<div class="container-fluid goals_padtop">
 				<div class="row goals_toptittle">
-					<div class="col-sm-2"></div>
-					<div class="col-sm-4">
+					<div class="col-sm-1"></div>
+					<div class="col-sm-5">
 						<p>CAAT goals and methodology</p>
 					</div>
 				</div>
 				<div class="row goals_toptext">
-					<div class="col-sm-2"></div>
-					<div class="col-sm-3">
+					<div class="col-sm-1"></div>
+					<div class="col-sm-4">
 						<p>
 							CAAT stands for Creating Arts and Alternatives Together and it uses creativity and arts to empower vulnerable groups and promote human rights and tolerant communities.
 						</p>
@@ -180,6 +181,130 @@
 
 	<div class="container-fluid remove_padding goals_img2 goals_mainTitleMargin"></div>
 
+	<div class="container-fluid goals_mainTitleMargin">
+		<div class="row">
+			<div class="col-sm-4"></div>
+			<div class="col-sm-4">
+				<p class="goals_mainTitle">Our Methods</p>
+			</div>
+		</div>
+		<div class="row goals_mainTextMargin">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-5">
+				<p class="goals_subtitle">Participatory and creative methodologies</p>
+			</div>
+			<div class="col-sm-5">
+				<p class="goals_subtitle">Non-Formal Education and Human Rights Education</p>
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-5">
+				<p class="goals_text2">
+					We support methodologies that have a horizontal power structure, where we all can contribute to the process and result. 
+					These methods encourage participation from everyone involved and has the potential to reveal a lot of talents we were not 
+					aware of. Our preference goes to methods that cultivate our creativity and makes us explore different ways of 
+					communication - theater, music, storytelling, poems, drawing, photo & video, circus, etc. Moreover, the use of 
+					diverse languages opens the way for inclusivity. It brings new opportunities for participation to diverse groups. 
+					Additionally, it is lovely to witness the creation of the collective story as a process of dialogue and compromise 
+					between the different elements of the group. It brings us together and brightens our imagination. 
+				</p>
+			</div>
+			<div class="col-sm-5">
+				<p class="goals_text2">
+					We believe in the power on non-formal education as a method that is centered on the participant and flexible enough to 
+					be adapted to a wide spectrum of learners. In this way we can be more inclusive and address different types of 
+					intelligences. Non-formal education starts from the experiential point of view, where we learn by doing and we 
+					also learn how to learn and properly integrate our meaningful daily experiences. We are always learning and 
+					growing together. It is also a more dynamic and potentially joyfull method. Human Rights Education shares most 
+					of its principles with non-formal education. It differs on the emphasis on the need to recognize the (lack of) 
+					human rights and our duty to ensure that those are available to all. We see human rights education as essential 
+					to promote balanced societies. For that reason we are part of the HREYN (Human Rights Education Youth 
+					Network - https://www.hreyn.net/) and working on human rights education advocacy training courses financed by the CoE.
+				</p>
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-5">
+				<p class="goals_subtitle">Using of arts as a tool to work with communities</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-5">
+				<p class="goals_text2">
+					In the arts there is no right or wrong. It is a symbolic language that supports us in a journey to explore and 
+					find alternatives. It helps us to embrace our vulnerability and transform it into strength. Every child is an 
+					artist and we tend to neglect this capability when we become adults. However, we find it important to get those 
+					skills and attitudes back. Thus, some of our projects are an invitation to play again, to create freely, to use 
+					our imagination and to look into reality through various lenses. 
+					One example of a project we created together with AddArt is a participatory storytelling event, when spectators can decide how the 
+					story develops in real time. It is a fantasy story but with the potential to foster really interesting discussions about the best ways 
+					to integrate refugees.					
+				</p>
+			</div>
+			<div class="col-sm-5">
+				<img class="img-fluid" src="assets/images/goals3.png">
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
+		<div class="row goals_mainTextMargin">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-5">
+				<p class="goals_subtitle">Holistic self-empowerment and competence-development programmes</p>
+			</div>
+			<div class="col-sm-5">
+				<p class="goals_subtitle">Monitoring, evaluating and learning processes</p>
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-5">
+				<p class="goals_text2">
+					We embrace programs that take into account knowledge, skills and values, taking into consideration the context, 
+					social and personal factors so that participants can find their own way forwards. For this reason, we integrate 
+					non-formal methodologies, which focus on the development of competences; participatory methodologies that 
+					takes into account needs, interest and the local realities of the participants and artistic tools that helps 
+					us explore other possibilities and dimensions of our development. 
+				</p>
+			</div>
+			<div class="col-sm-5">
+				<p class="goals_text2">
+					It is essential to be critical about ourselves and our work too. Thus, we find it important to have an external 
+					officer that monitor and evaluates the work developed. Sometimes it is our role in partner projects, other times 
+					we invite partners or volunteer to assist us with this task. In our opinion, it is the best way to learn from 
+					practice, improve ourselves and ensure we are going in the right direction. In our latest international trainings, 
+					co-funded by Erasmus plus, we have incorporated in our team a MEL officer – as it is the case of 
+					CARE - Complex Activation of Resilience is Essential’s project.
+				</p>
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
+		<div class="row goals_mainTextMargin">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-5">
+				<p class="goals_subtitle">Organization of events, workshops and festivals</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-5">
+				<p class="goals_text2">
+					We celebrate the results, as well as the co-creation processes and the sharing of knowledge. We believe in our 
+					duty to share what we know and have. We are all together in the design of a more inclusive future.  
+					Moreover, we bring art and creativity to a wider audience. Sometimes with a focus on bringing people together, 
+					other times with a focus on developing awareness about social issues and promoting a discussion over the possible 
+					alternatives. A video of one of our events co-funded by Europe for Citizens - https://www.youtube.com/watch?v=K1aFJBnEhvs.
+					We have supported the organization of events with Formaat, Diversity House, OT301 and Home of Participation and 
+					we hope to extend the list very soon. 
+				</p>
+			</div>
+		</div>
+	</div>
 	<!-- ------------------------------footer-------------------------------------- -->
 	<footer>
 		<div class="container-fluid home_work home_margTop4" style="text-align: center;">
