--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="assets/images/favicon.ico">
 	<title>CAAT PROJECTS</title>
 
 	<link rel="stylesheet" href="assets/styles/style.css">
@@ -13,7 +14,7 @@
 <div class="caat_navbar">
 	<div class="row remove_row_margin align-items-center " style="height: 100%">
 		<div class="col-sm-2" style="padding-left: 40px">
-			<a  href="/">
+			<a  href="index">
     			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
   			</a>
 		</div>
@@ -24,7 +25,7 @@
 						<a class="nav-link" href="goals">Goals and methodology</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Who we are</a>
+						<a class="nav-link" href="who-we-are">Who we are</a>
 					</li>
 					<li class="nav-item">
 					    <a class="nav-link" href="#">Projects</a>
