--- a/goals.html
+++ b/goals.html
@@ -33,7 +33,7 @@
 						    <a class="nav-link" href="#">ANBI</a>
 						</li>
 						<li class="nav-item">
-						    <a class="nav-link" href="#">Contact us </a>
+						    <a class="nav-link" href="contact-us">Contact us </a>
 				  		</li>
 					</ul>
 				</div>
