--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 						<a class="nav-link" href="who-we-are">Who we are</a>
 					</li>
 					<li class="nav-item">
-					    <a class="nav-link" href="#">Projects</a>
+					    <a class="nav-link" href="projects">Projects</a>
 					</li>
 					<li class="nav-item">
-					    <a class="nav-link" href="#">ANBI</a>
+					    <a class="nav-link" href="ANBI">ANBI</a>
 					</li>
 					<li class="nav-item">
 					    <a class="nav-link" href="contact-us">Contact us </a>
